@@ -1,4 +1,9 @@
 
+  o record types in the logic
+    - introduced with syntax "type t = {| a:int; b:bool |}"
+    - actually syntactic sugar for "type t = T (a:int) (b:bool)"
+      i.e. an algebraic with one constructor and projection functions
+
 version 0.64, Feb 16, 2011
 ==========================
 
